@@ -1,8 +1,8 @@
 Format: 1.0
 Source: drlm
-Version: 1.00
+Version: 1.1.0
 Binary: drlm
-Maintainer: 
+Maintainer: Pau Roura (pau@brainupdaters.net)
 Architecture: all
 Build-Depends: debhelper (>> 5.0.0)
 Files: 
