@@ -1,4 +1,4 @@
-%define rpmrelease git
+%define rpmrelease %{nil}
 
 ### Work-around the fact that OpenSUSE/SLES _always_ defined both :-/
 %if 0%{?sles_version} == 0
@@ -7,11 +7,11 @@
 
 Summary: DRLM
 Name: drlm
-Version: 1.00
-Release: %{?rpmrelease}%{?dist}
+Version: 1.1.0
+Release: 1%{?rpmrelease}%{?dist}
 License: GPLv3
 Group: Applications/File
-#URL: 
+URL: http://drlm.org/
 
 Source: http://drlm.org/download/
 
