@@ -26,7 +26,7 @@
 # Versioning
 PRODUCT="Disaster Recovery Linux Manager"
 PROGRAM=${0##*/}
-VERSION=1.0.0
+VERSION=1.1.0
 RELEASE_DATE="Git"
 
 STARTTIME=$SECONDS
